--- a/src/main/resources/templates/info.html
+++ b/src/main/resources/templates/info.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>库存管理信息系统</h1>
-        <p th:text="${result}"> 
+        <h2><p th:text="${result}"></h2> <hr>
         <p th:text="${uid}">
     </body>
 </html>
