--- a/src/main/resources/templates/info.html
+++ b/src/main/resources/templates/info.html
@@ -7,5 +7,6 @@
         <h1>库存管理信息系统</h1>
         <h2><p th:text="${result}"></h2> <hr>
         <p th:text="${uid}">
+        <p th:text="${ver}">
     </body>
 </html>
