--- a/src/main/resources/templates/default.html
+++ b/src/main/resources/templates/default.html
@@ -3,33 +3,19 @@
 
 <body>
 欢迎<a th:text="${uid}"></a>
-<hr>
-添加新用户:
-<form name="form1" action="adduser">
 <table border="0">
-    <tr><td>用户名:</td><td><input  name="uname"></td></tr>
-    <tr><td>密码：</td><td><input name="upass" type="password"></td></tr>
-    <tr><td><input type="submit"></td><td><input type="reset"></td></tr>
-</table>
-</form>
-<hr>
-<table>
 <tr>
-    <td style="vertical-align: top;">
+<td style="vertical-align: top;">
 <div>
     <ul>
-        <li><a href="http://www.w3school.com.cn/tags/tag_iframe.asp" target="iframe_a">w3c school</a></li>
-        <li><a href="https://www.baidu.com/index.php?tn=monline_3_dg" target="iframe_a">百度</a></li>
-        <li><a href="https://www.cnblogs.com/" target="iframe_a">博客园</a></li>
-        <li><a href="http://www.ximalaya.com/explore/" target="iframe_a">喜马拉雅</a></li>
-        <li><a href="https://jx.tmall.com/?ali_trackid=2:mm_28347190_2425761_27186547:1503727807_3k9_233309614" target="iframe_a">天猫</a></li>
-        <li><a href="http://www.ctrip.com/?allianceid=1381&sid=1068414" target="iframe_a">携程</a></li>
+        <li><a href="adduser.html" target="iframe_a">添加用户</a></li>
+        <li><a href="addtype.html" target="iframe_a">添加物品分类</a></li>
+        <li><a href="addstock.html" target="iframe_a">添加物品</a></li>
     </ul>
 </div>
 </td>
 <td>
-<iframe src="index.html" name="iframe_a" frameborder="0" width="1600" height="768">
-    
+<iframe src="welcome.html" name="iframe_a" frameborder="0" width="1366" height="768">
 </iframe>
 </td>
 </tr>
