--- a/src/main/resources/templates/default.html
+++ b/src/main/resources/templates/default.html
@@ -11,6 +11,7 @@
         <li><a href="adduser.html" target="iframe_a">添加用户</a></li>
         <li><a href="addtype.html" target="iframe_a">添加物品分类</a></li>
         <li><a href="addstock.html" target="iframe_a">添加物品</a></li>
+        <li><a href="showstock.html" target="iframe_a">查看库存信息</a></li>
     </ul>
 </div>
 </td>
