--- a/src/main/resources/templates/showstock.html
+++ b/src/main/resources/templates/showstock.html
@@ -7,7 +7,7 @@
         <td th:text="${i.good_name}"></td>
         <td th:text="${i.type_name}"></td>
         <td th:text="${i.count}"></td>
-        <td><a th:href="@{update(good_name=${i.good_name})}">修改库存</a></td>
+        <td><a th:href="@{update(aa=${i.good_name})}">修改库存</a></td>
     </tr>
 
 </table>
