--- a/src/main/resources/templates/default.html
+++ b/src/main/resources/templates/default.html
@@ -5,7 +5,7 @@
 欢迎<a th:text="${uid}"></a>
 <table border="0">
 <tr>
-<td style="vertical-align: top;">
+<td style="vertical-align: top; white-space: nowrap;">
 <div>
     <ul>
         <li><a href="adduser.html" target="iframe_a">添加用户</a></li>
@@ -22,5 +22,4 @@
 </tr>
 </table>
 </body>
-
 </html>
